--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 .slide-down {
     animation: slide-down 0.5s linear;
     animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -18,8 +23,86 @@
     }
 }
 
+.fade-in {
+    animation: fade-in 0.5s linear;
+    /* animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55); */
+}
+
+.page-transition {
+    animation: fade-in 0.3s ease-out;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @layer base {
     body {
-        @apply text-lg min-h-screen;
+        @apply min-h-screen;
+    }
+}
+
+@layer components {
+    h1,
+    .h1,
+    h2,
+    .h2,
+    h3,
+    .h3,
+    h4,
+    .h4,
+    h5,
+    .h5 {
+        @apply font-semibold mb-[0.6em];
+    }
+
+    h1,
+    .h1 {
+        @apply text-4xl md:text-5xl;
+    }
+    h2,
+    .h2 {
+        @apply text-3xl md:text-4xl;
+    }
+    h3,
+    .h3 {
+        @apply text-2xl md:text-3xl;
+    }
+    h4,
+    .h4 {
+        @apply text-xl md:text-2xl;
+    }
+    h5,
+    .h5 {
+        @apply text-lg md:text-xl;
+    }
+
+    .switch-btn {
+        @apply inline-block w-[50px] h-[28px] relative;
+    }
+
+    .switch-btn span {
+        @apply block w-full h-full bg-gray-200 rounded-[14px];
+    }
+
+    .switch-btn input:checked + span {
+        @apply bg-accent;
+    }
+    .switch-btn input:checked + span::after {
+        @apply translate-x-[22px];
+    }
+
+    .switch-btn span::after {
+        @apply content-[""] transition-all duration-300 z-10 absolute top-[2px] left-[2px] w-[24px] h-[24px]
+		rounded-full bg-white;
+    }
+
+    .switch-btn input {
+        @apply hidden;
     }
 }
